<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Receptionist</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
    
    <string name="menu_concepts">Analyze for Concepts</string>
    <string name="menu_entities">Analyze for Entities</string>
    <string name="menu_keywords">Analyze for Keywords</string>
    <string name="button_concepts">Concepts</string>
    <string name="button_entities">Entities</string>
    <string name="button_keywords">Keywords</string>
    <string name="button_text">Text</string>
    <string name="button_sentiment">Sentiment</string>

</resources>
